# InfoWatchtower

./: .gitignore  AGENTS.md  Makefile  README.md  SESSION-HANDOFF.md
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0a1b2c3d4e5f_add_recommendation_admission_fields.py  1a2b3c4d5e6f_add_historical_reports_archive.py  (+35 more)
backend/app/: __init__.py  main.py  news_keywords.py
backend/app/api/: router.py
backend/tests/: conftest.py  test_account_lifecycle.py  test_adapter_crawler.py  test_adapter_csv.py  test_adapter_paper_page.py  test_adapter_push_based.py  test_adapter_wechat.py  test_adapter_wiseflow.py  test_adapters.py  test_auth.py  test_backup_restore_scripts.py  test_blueprint_page_audit.py  test_company_sql_export.py  test_credentials.py  test_credentials_api.py  test_daily_pipeline.py  test_daily_report_publish_flow.py  test_deployment_modes.py  test_entity_milestone_extraction.py  test_feedback_rollup.py  test_frontend_control_governance.py  test_full_acceptance_script.py  test_generation_provider.py  test_generation_template.py  test_health.py  test_ingestion_fetch.py  test_ingestion_runs.py  test_intranet_write_paths.py  test_minimax_acceptance_validator.py  test_minimax_provider.py  test_news_api.py  test_news_normalization.py  test_operations_api.py  test_pipeline_rerun_preserves_editorial.py  test_pipeline_retry.py  test_recommendation_policy.py  test_recommendation_rerank.py  test_recommendations.py  test_report_archive_api.py  test_report_renditions.py  (+20 more)
(+403 files in other folders)
